[package]
name = "no-io"
version = "0.1.0"
edition = "2018"

categories = ["no-std", "date-and-time", "embedded"]

[dependencies]
futures-io = { version = "^0.3.1", optional = true }
tokio-io = { version = "^0.2.0-alpha.6", optional = true }
tokio = { version = "^0.2.0", optional = true }
# async-std
# embrio?

[features]
unstable = []
sync = []
async = []
std = []
hash-stream = []

compat-futures = ["std", "async", "futures-io"]
compat-tokio = ["std", "async", "tokio-io"]
default = ["sync", "async"]
