[package]
name = "no-io"
version = "0.1.0"
edition = "2018"

categories = ["no-std", "date-and-time", "embedded"]

[dependencies]
futures-io = { version = "^0.3.1", optional = true }
tokio = { version = "^1.5.0", optional = true }
unchecked-ops = { version = "^0.1.0", git = "https://github.com/AerialX/unchecked-ops.rs" }
ufmt = { version = "^0.1.0", optional = true } # TODO: ufmt_write
# async-std
# embrio?

[features]
unstable = ["unchecked-ops/unstable"]
sync = []
async = []
std = []
hash-stream = []

compat-futures = ["std", "async", "futures-io"]
compat-tokio = ["std", "async", "tokio"]
default = ["sync", "async"]
